--- a/public/templates/directiveTemplates/addInvoice.html
+++ b/public/templates/directiveTemplates/addInvoice.html
@@ -10,8 +10,8 @@
 </div>
 
 
-<div ng-show="showAddInvoiceField" class="addInvoice input-field shadow-effect container soft-border">
-  <div class="row">
+<div ng-show="showAddInvoiceField" class="addInvoice input-field shadow-effect soft-border">
+  <div class="">
 
       <div class="col s12 center-align">
         <h5>Add Invoice</h5>
