--- a/public/templates/directiveTemplates/projectSummaries.html
+++ b/public/templates/directiveTemplates/projectSummaries.html
@@ -16,9 +16,9 @@
 <div ng-repeat="project in projects" class="project-button soft-border">
   <a ui-sref="seeProject({id: project.id})">
     <div class="view-button right">
-      <div class="round-button waves-effect waves-light shadow-effect">
+      <!-- <div class="round-button waves-effect waves-light shadow-effect"> -->
         <img class="arrow"src="/images/arrow.png" alt="" />
-      </div>
+      <!-- </div> -->
     </div>
     <div class="project-box shadow-effect soft-border">
       <div class="project-name  left-align">
