--- a/public/templates/directiveTemplates/addCustomer.html
+++ b/public/templates/directiveTemplates/addCustomer.html
@@ -1,4 +1,4 @@
-<div ng-show="showAddField" class="add-customer-info shadow-effect input-field container soft-border">
+<div ng-show="showAddField" class="add-customer-info shadow-effect soft-border">
   <div class="row">
     <div class="col s12 center-align">
       <h5>Add Customer</h5>
