--- a/public/templates/directiveTemplates/addProject.html
+++ b/public/templates/directiveTemplates/addProject.html
@@ -1,6 +1,6 @@
 
 <div class="add-project-button-wrapper" ng-click="showAddProjectField = !showAddProjectField" ng-show="!showAddProjectField">
-  <div class="add-button-box shadow-effect soft-border">
+  <div class="add-button-box add-project-button-box shadow-effect soft-border">
     <h5 class="add-project-title center-align">Add Project</h5>
 
     <div class="add-project-round-button round-button right shadow-effect">
