--- a/public/templates/directiveTemplates/navBar.html
+++ b/public/templates/directiveTemplates/navBar.html
@@ -7,6 +7,17 @@
           <span class="living"><p>living</p></span>
         </div>
       </a>
+      <!-- <div class="fixed-action-btn horizontal click-to-toggle" style="bottom: 45px; right: 24px;">
+    <a class="btn-floating btn-large red">
+      <i class="material-icons">menu</i>
+    </a>
+    <ul>
+      <li><a class="btn-floating red"><i class="material-icons">insert_chart</i></a></li>
+      <li><a class="btn-floating yellow darken-1"><i class="material-icons">format_quote</i></a></li>
+      <li><a class="btn-floating green"><i class="material-icons">publish</i></a></li>
+      <li><a class="btn-floating blue"><i class="material-icons">attach_file</i></a></li>
+    </ul>
+  </div> -->
       <a class="nav-project-name-text" ui-sref="projects">
         <div ng-model="navProjectName"class="navProjectName darker-shadow-effect soft-border">
             <h5 >{{navProjectName}}</h5>
