--- a/public/templates/directiveTemplates/addCustomer.html
+++ b/public/templates/directiveTemplates/addCustomer.html
@@ -20,7 +20,7 @@
 
 <div ng-click="showAddField = !showAddField" ng-show="!showAddField"class="add-button-box shadow-effect soft-border">
   <div class="add-button-box-title">
-    <h5>Add Customer Information</h5>
+    <h5>Add Customer</h5>
   </div>
   <div class="round-add-button shadow-effect waves-effect waves-light right">
     <div class="red-image-add">
