--- a/public/templates/directiveTemplates/project.html
+++ b/public/templates/directiveTemplates/project.html
@@ -1,13 +1,16 @@
 <div class="project-content">
 
     <nav-bar> </nav-bar>
-<div class="project-dates container">
-  <div ng-repeat="project in project" class="row">
-    <div class="col s6">
-      <h5>{{project.project_start_date}}</h5>
+<div class="project-name-and-dates">
+  <div ng-repeat="project in project" class="row project-name-and-dates-content">
+    <div class="project-name-top">
+    <h4>  {{project.project_name}}</h4>
     </div>
-    <div class="col s6">
-      <h5>{{project.project_deadline}}</h5>
+    <div class="project-start-date-top col s6">
+      <h6>Start Date: {{project.project_start_date}}</h6>
+    </div>
+    <div class="project-deadline-top col s6">
+      <h6>Deadline: {{project.project_deadline}}</h6>
     </div>
   </div>
 </div>
@@ -68,28 +71,27 @@
       <div class="invoices-section-title">
         <h4>Invoices</h4>
       </div>
-      <div ng-repeat="invoice in invoices"class="invoice-container darker-shadow-effect soft-border">
-        <div class="invoice-delete-container "ng-click="deleteInvoice(invoice.invoice_id)">
-          <div class="small-delete-button shadow-effect waves-effect waves-light">
-            <div class="small-red-image-delete">
-              <img class="small-red-image-delete"src="/images/delete.png" alt="" />
+        <div ng-repeat="invoice in invoices"class="invoice-container darker-shadow-effect soft-border">
+          <a ui-sref="seeInvoice({id: projectId, invoiceId: invoice.invoice_id})">
+          <div class="invoice-delete-container "ng-click="deleteInvoice(invoice.invoice_id)">
+            <div class="small-delete-button shadow-effect waves-effect waves-light">
+              <div class="small-red-image-delete">
+                <img class="small-red-image-delete"src="/images/delete.png" alt="" />
+              </div>
             </div>
           </div>
-        </div>
-      <div class="invoice-period-description">
-        <a ui-sref="seeInvoice({id: projectId, invoiceId: invoice.invoice_id})">
-        <div class="invoice-period">
-          <div class="invoice-period-text">
-            <i class="material-icons">today</i>
-            {{invoice.invoice_period}}
+          <div class="invoice-period-description">
+              <div class="invoice-period">
+                <div class="invoice-period-text">
+                  <i class="material-icons">today</i>
+                  {{invoice.invoice_period}}
+                </div>
+              </div>
+              <div class="invoice-description">
+                <div class="invoice-description-text">{{invoice.invoice_description}}</div>
+              </div>
           </div>
+          </a>
         </div>
-        <div class="invoice-description">
-          <div class="invoice-description-text">{{invoice.invoice_description}}</div>
-        </div>
-      </div>
-
-      </a>
-      </div>
     </div>
     <add-invoice></add-invoice>
