just added invoice period call

--- a/public/templates/directiveTemplates/invoice.html
+++ b/public/templates/directiveTemplates/invoice.html
@@ -35,7 +35,7 @@
   </div> -->
 <div class="invoice-detail-container shadow-effect soft-border">
   <div class="invoice-header">
-    <div class="invoice-detail-title"><h4>Invoice Information</h4><hr></div>
+    <div class="invoice-detail-title"><h4>{{invoicePeriodInfo}}</h4><hr></div>
   </div> <!-- End Invoice Header -->
   <div class="invoice-detail-wrapper">
     <div class="invoice-column-titles">
