switched over to elephantSQL

--- a/public/css/main.scss
+++ b/public/css/main.scss
@@ -5,10 +5,10 @@
 //default pixel size 16px
 
 // VARIABLES!!!
-$darkColor: #273646;
-$medColor: #47627F;
-$lightColor: #E9EEEF;
-$mainAccentColor: #229C8F;
+$darkColor: #0064A5;
+$medColor: #0076C2;
+$lightColor: #E2E4E6;
+$mainAccentColor: #FFFFFF;
 $importantAccentColor: #E44235;
 $smallBackgroundImage: url("../images/tree.jpg");
 // $mediumBackgroundImage: "";
